Closed Bug 866120 Opened 11 years ago Closed 11 years ago

WebRTC Error phrases are incorrect mid-session

Categories

(Core :: WebRTC: Signaling, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla23
Tracking Status
firefox22 --- fixed

People

(Reporter: abr, Assigned: abr)

Details

(Whiteboard: [WebRTC],[blocking-webrtc-][qa-])

Attachments

(1 file, 1 obsolete file)

If an error callback is activated mid-session (i.e., after a session is created), then the error code is correct, but the reason phrase is not necessarily correct (it may be empty, or it may be a previously-generated error message).
This patch copies the reason phrase over for the mid-session case.
Attachment #742385 - Flags: review?(rjesup)
Attachment #742385 - Flags: review?(rjesup) → review+
Attachment #742385 - Attachment is obsolete: true
Attachment #742394 - Flags: review?(rjesup)
Attachment #742394 - Flags: review?(rjesup) → review+
Priority: -- → P1
Whiteboard: [WebRTC],[blocking-webrtc-][webrtc-uplift]
Comment on attachment 742394 [details] [diff] [review] Propagate reason phrases mid-session [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 860012 User impact if declined: Error details for WebRTC API may be incorrect or missing Testing completed (on m-c, etc.): Local unit testing to verify proper functioning. Risk to taking this patch (and alternatives if risky): Virtually none. This patch simply copies functionality for mid-session errors that already exists for error at the beginning of a session. String or IDL/UUID changes made by this patch: None.
Attachment #742394 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Keywords: verifyme
Attachment #742394 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [WebRTC],[blocking-webrtc-][webrtc-uplift] → [WebRTC],[blocking-webrtc-]
Keywords: verifyme
Whiteboard: [WebRTC],[blocking-webrtc-] → [WebRTC],[blocking-webrtc-][qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: