Bug 866120 - Propagate reason phrases mid-session r=jesup